entity_macros/tests/ui/derive/ent/missing-created.stderr
error: No created field provided
  --> $DIR/missing-created.rs:4:1
   |
4  | / struct TestEnt {
5  | |     #[ent(id)]
6  | |     id: Id,
7  | |
...  |
12 | |     last_updated: u64,
13 | | }
   | |_^
